<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bck"
    tools:context=".Register">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/backtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16.9dp"
            android:layout_marginLeft="16.9dp"
            android:drawableStart="@drawable/ic_arrow"
            android:drawableLeft="@drawable/ic_arrow"
            android:text="@string/bck"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:scrollbarSize="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginBottom="160dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="347dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rad"
                android:orientation="vertical">




                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/topred">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"/>


                </LinearLayout>




                <LinearLayout
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_width="347dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/name">

                    <ImageView
                        android:contentDescription="@string/login"
                        android:scaleType="centerInside"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_email"
                        android:layout_gravity="center"
                        android:paddingLeft="25dp"
                        android:paddingStart="25dp"
                        android:paddingRight="20dp"
                        android:paddingEnd="20dp"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textto22"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="13dp"
                            android:layout_marginStart="13dp"
                            android:textAlignment="center"
                            android:textSize="18sp"
                            android:text="@string/Email"
                            android:textColor="@color/user" />

                        <EditText
                            android:id="@+id/editText666"
                            android:padding="10dp"
                            android:layout_width="229.5dp"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/Emailtp"
                            android:inputType="textEmailAddress"
                            android:textColorHint="@color/hint"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.383"/>

                    </LinearLayout>


                </LinearLayout>




                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:contentDescription="@string/password"
                        android:scaleType="centerInside"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_password"
                        android:layout_gravity="center"
                        android:paddingLeft="25dp"
                        android:paddingStart="25dp"
                        android:paddingRight="20dp"
                        android:paddingEnd="20dp"/>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">



                        <TextView
                            android:id="@+id/textoor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="13dp"
                            android:layout_marginStart="13dp"
                            android:textSize="18sp"
                            android:text="@string/pw"
                            android:textColor="@color/user" />

                        <EditText
                            android:id="@+id/editText7"
                            android:layout_width="229.5dp"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:ems="10"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:textColorHint="@color/hint"
                            app:layout_constraintEnd_toEndOf="@+id/editText6"
                            app:layout_constraintStart_toStartOf="@+id/editText6"
                            app:layout_constraintTop_toBottomOf="@+id/editText6" />


                    </LinearLayout>


                </LinearLayout>













                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"/>

                </LinearLayout>





            </LinearLayout>


            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/agree"
                    android:textColor="@color/user"
                    android:textSize="16sp"
                    android:theme="@style/colored_checkBox" />

                <TextView
                    android:layout_marginEnd="120dp"
                    android:layout_marginRight="120dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terms"
                    android:textColor="@color/colorPrimary"/>


            </LinearLayout>

            <Button
                android:id="@+id/button6"
                android:layout_width="347dp"
                android:layout_height="56dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn"
                android:text="@string/CreateAccount"
                android:textAllCaps="false"
                android:textColor="@color/White"
                android:textSize="17sp"/>

            <TextView
                android:clickable="true"
                android:focusable="true"
                android:linksClickable="true"
                android:id="@+id/button11"
                android:layout_marginBottom="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/GTLG"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>